--- a/src/static/main.scss
+++ b/src/static/main.scss
@@ -1,6 +1,6 @@
 body {
     font: 14px "Century Gothic", Futura, sans-serif;
-    margin: 90px 8px 0px 24px;
+    margin: 0;
     background: #181a1b;
 }
 #root {
