--- a/src/TicToe/OnLinePage/Static/onlinePage.scss
+++ b/src/TicToe/OnLinePage/Static/onlinePage.scss
@@ -56,6 +56,7 @@
             .registration {
                 position: absolute;
                 background: inherit;
+                padding: inherit;
                 left: 0;
                 right: 0;
                 top: 0;
