--- a/src/TicToe/OnLinePage/ControlPanel/Static/ranks.scss
+++ b/src/TicToe/OnLinePage/ControlPanel/Static/ranks.scss
@@ -7,7 +7,7 @@
         @include title;
     }
 
-    .cPlayer {
+    .rPlayer {
         background: #033046;
         display: flex;
         height: 40px;
