add style to points

--- a/src/TicToe/OnLinePage/ControlPanel/Static/ranks.scss
+++ b/src/TicToe/OnLinePage/ControlPanel/Static/ranks.scss
@@ -30,5 +30,8 @@
         .name {
             margin-left: 10px;
         }
+        .points {
+            margin-left: 15px;
+        }
     }
 }
