add static width to the name span element

--- a/src/TicToe/OnLinePage/ControlPanel/Static/ranks.scss
+++ b/src/TicToe/OnLinePage/ControlPanel/Static/ranks.scss
@@ -29,6 +29,7 @@
         }
         .name {
             margin-left: 10px;
+            width: 70px;
         }
         .points {
             margin-left: 15px;
