--- a/src/TicToe/OnLinePage/ControlPanel/Static/ranks.scss
+++ b/src/TicToe/OnLinePage/ControlPanel/Static/ranks.scss
@@ -31,8 +31,9 @@
             margin-left: 10px;
             width: 70px;
         }
-        .points {
-            margin-left: 15px;
+        .point {
+            color: #c22121;
+            font-size: 19px;
         }
     }
 }
