red line in title

--- a/src/TicToe/OnLinePage/ControlPanel/Static/mixins.scss
+++ b/src/TicToe/OnLinePage/ControlPanel/Static/mixins.scss
@@ -7,7 +7,7 @@
         content: '';
         display: block;
         height: 1px;
-        background: white;
+        background: #b8111d;
         width: 85%;
         position: absolute;
     }
