handle successed and failed messages

--- a/src/TicToe/OnLinePage/ControlPanel/Static/registration.scss
+++ b/src/TicToe/OnLinePage/ControlPanel/Static/registration.scss
@@ -70,5 +70,11 @@
     }
     .response {
         word-break: break-all;
+        &.success {
+            color: lime;
+        }
+        &.fail {
+            color: red;
+        }
     }
 }
