--- a/src/TicToe/OnLinePage/ControlPanel/Static/registration.scss
+++ b/src/TicToe/OnLinePage/ControlPanel/Static/registration.scss
@@ -6,7 +6,7 @@
     padding: inherit;
     left: 0;
     right: 0;
-    top: -320px;
+    top: -520px;
     bottom: unset;
     transition: top 0.7s ease-in-out;
 
@@ -72,6 +72,7 @@
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
+        margin-top: 15px;
         .response {
             word-break: break-all;
         &.success {
@@ -88,6 +89,16 @@
             border-radius: 3px;
             display: flex;
             justify-content: center;
+            cursor: pointer;
        }
+    }
+    .goLoggin {
+        display: flex;
+        justify-content: center;
+        background: green;
+        padding: 4px;
+        margin-top: 20px;
+        border-radius: 2px;
+        cursor: pointer;
     }
 }
