--- a/src/TicToe/OnLinePage/ControlPanel/Static/myStatus.scss
+++ b/src/TicToe/OnLinePage/ControlPanel/Static/myStatus.scss
@@ -7,13 +7,20 @@
 
     .statusItem {
         margin: 15px;
-
-        &.opponents {}
+        &.person {
+            background: yellow;
+            .name {
+                background: green;
+            }
+            .avatar {
+                background: grey;
+            }
+        }
 
         &.points {}
 
-        &.avaiablility {}
+        &.maxTime {}
 
-        &.playTime {}
+        &.maxPlayers {}
     }
 }
