--- a/src/TicToe/OnLinePage/ControlPanel/Static/myStatus.scss
+++ b/src/TicToe/OnLinePage/ControlPanel/Static/myStatus.scss
@@ -7,13 +7,20 @@
 
     .statusItem {
         margin: 15px;
+        &:not(.person) {
+        border-bottom: 1px solid #95252a;
+        }
         &.person {
-            background: yellow;
+            display: flex;
+            justify-content: space-evenly;
+            align-items: center;
             .name {
-                background: green;
+                background: #95252a;
+                padding: 6px;
             }
             .avatar {
-                background: grey;
+                width: 90px;
+                border-radius: 30px;
             }
         }
 
