--- a/src/TicToe/OnLinePage/ControlPanel/Static/registration.scss
+++ b/src/TicToe/OnLinePage/ControlPanel/Static/registration.scss
@@ -6,7 +6,7 @@
     padding: inherit;
     left: 0;
     right: 0;
-    top: -520px;
+    top: -800px;
     bottom: unset;
     transition: top 0.7s ease-in-out;
 
@@ -100,5 +100,10 @@
         margin-top: 20px;
         border-radius: 2px;
         cursor: pointer;
+    }
+    .loaderContainer {
+        display: flex;
+        justify-content: center;
+        margin-top: 21px;
     }
 }
