--- a/src/TicToe/OnLinePage/ControlPanel/Static/myStatus.scss
+++ b/src/TicToe/OnLinePage/ControlPanel/Static/myStatus.scss
@@ -23,11 +23,18 @@
                 border-radius: 30px;
             }
         }
-
         &.points {}
 
         &.maxTime {}
 
         &.maxPlayers {}
+    }
+    .loggedOut {
+        background: #727323;
+        width: 88px;
+        color: black;
+        position: absolute;
+        bottom: 0;
+        left: 0;
     }
 }
