--- a/src/TicToe/OnLinePage/ControlPanel/Static/myStatus.scss
+++ b/src/TicToe/OnLinePage/ControlPanel/Static/myStatus.scss
@@ -30,11 +30,12 @@
         &.maxPlayers {}
     }
     .loggedOut {
-        background: #727323;
+        background: #999999;
         width: 88px;
         color: black;
         position: absolute;
         bottom: 0;
         left: 0;
+        cursor: pointer;
     }
 }
