--- a/src/TicToe/OnLinePage/ControlPanel/Static/ranks.scss
+++ b/src/TicToe/OnLinePage/ControlPanel/Static/ranks.scss
@@ -42,9 +42,20 @@
         }
         .point {
             position: absolute;
-            left: 83%;
+            left: 77%;
             color: #c22121;
             font-size: 19px;
+        }
+        .online {
+            width: 10px;
+            height: 10px;
+            position: absolute;
+            right: 2%;
+            border-radius: 50%;
+            background: red;
+            &.on {
+                background: green;
+            }
         }
     }
 }
