keep standard height

--- a/src/TicToe/OnLinePage/ControlPanel/Static/controlPanel.scss
+++ b/src/TicToe/OnLinePage/ControlPanel/Static/controlPanel.scss
@@ -2,6 +2,7 @@
     display: grid;
     grid-template-columns: 25% 25% 50%;
     background: #004364;
+    min-height: 270px;
     .account {
         background: #19385e;
         color: white;
