--- a/src/TicToe/OnLinePage/ControlPanel/Static/liveOverview.scss
+++ b/src/TicToe/OnLinePage/ControlPanel/Static/liveOverview.scss
@@ -34,6 +34,10 @@
                 display: flex;
                 align-items: center;
                 margin: 0 10px;
+                background: #95252a;
+                color: white;
+                padding: 0 10px;
+                cursor: pointer;
             }
         }
     }
