--- a/src/TicToe/OnLinePage/ControlPanel/Static/liveOverview.scss
+++ b/src/TicToe/OnLinePage/ControlPanel/Static/liveOverview.scss
@@ -34,10 +34,14 @@
                 display: flex;
                 align-items: center;
                 margin: 0 10px;
-                background: #95252a;
+                background: #004364;
                 color: white;
                 padding: 0 10px;
                 cursor: pointer;
+                &.enemy{
+                    background: #66171c;
+                    cursor: default;
+                }
             }
         }
     }
