--- a/src/TicToe/OnLinePage/ControlPanel/Static/ranks.scss
+++ b/src/TicToe/OnLinePage/ControlPanel/Static/ranks.scss
@@ -18,6 +18,9 @@
         &:not(:first-child) {
             border-top: 1px solid white;
         }
+        &.enemy{
+            background: #2d090b;
+        }
         .avatar {
             width: 30px;
             height: 30px;
