protect from forbidden clikc

--- a/src/TicToe/OnLinePage/ControlPanel/Static/liveOverview.scss
+++ b/src/TicToe/OnLinePage/ControlPanel/Static/liveOverview.scss
@@ -41,6 +41,7 @@
                 &.enemy{
                     background: #66171c;
                     cursor: default;
+                    pointer-events: none;
                 }
             }
         }
