style for gamesContainer

--- a/src/TicToe/OnLinePage/Static/onlinePage.scss
+++ b/src/TicToe/OnLinePage/Static/onlinePage.scss
@@ -1,5 +1,4 @@
 .onLinePage {
-    background: indianred;
     font-size: 16px;
 }
 .loader {
@@ -13,4 +12,191 @@
 @keyframes spin {
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
+}
+.gamesContainer {
+  display: grid;
+  grid-template-columns: 33% 33% 33%;
+  grid-template-rows: auto;
+
+  @media screen and (max-width: 1300px) {
+    grid-template-columns: 50% 50%;
+  }
+
+  @media screen and (max-width: 950px) {
+    grid-template-columns: 100%;
+  }
+
+  .game {
+    display: flex;
+    flex-direction: row;
+    text-align: center;
+    height: 340px;
+    width: 500px;
+    position: relative;
+
+    .gameBoard {
+      width: 210px;
+
+      .boardRow {
+        &:after {
+          clear: both;
+          content: "";
+          display: table;
+        }
+
+        .square {
+          color: white;
+          background: #fff;
+          border: 1px solid #999;
+          float: left;
+          font-size: 24px;
+          font-weight: bold;
+          line-height: 34px;
+          height: 60px;
+          margin-right: -1px;
+          margin-top: -1px;
+          padding: 0;
+          text-align: center;
+          width: 60px;
+          transition: 1s;
+          box-shadow: 1px 0px 11px 2px #9af1d7;
+          /* dark mode */
+          background-color: rgb(24, 26, 27);
+          border-top-color: rgb(71, 71, 71);
+          border-right-color: rgb(71, 71, 71);
+          border-bottom-color: rgb(71, 71, 71);
+          border-left-color: rgb(71, 71, 71);
+          box-shadow: rgb(14, 98, 73) 1px 0px 11px 2px;
+
+          &:hover {
+            background: #b1d0ee;
+            border: 3px solid rgb(0, 189, 110);
+            /* dark mode */
+            background-color: rgb(46, 49, 51);
+            border-top-color: rgb(0, 217, 126);
+            border-right-color: rgb(0, 217, 126);
+            border-bottom-color: rgb(0, 217, 126);
+            border-left-color: rgb(0, 217, 126);
+          }
+
+          &:focus {
+            outline: none;
+          }
+
+          &.squareW {
+            background: dodgerblue;
+            font-size: 28px;
+            color: antiquewhite;
+
+            &:hover {
+              background: dodgerblue;
+            }
+          }
+
+          &.squareA {
+            margin-right: 4px;
+            margin-top: 4px;
+          }
+        }
+      }
+    }
+
+    .gameInfo {
+      width: 150px;
+
+      .status {
+        color: white;
+        font-size: 14px;
+        transition: 0.3s;
+      }
+
+      .winner {
+        color: #5da1e4;
+        font-size: 20px;
+      }
+
+      ol {
+        padding-left: 30px;
+        list-style: none;
+
+        li {
+          button {
+            &.travel {
+              background: rgb(99, 167, 217);
+              color: white;
+              padding: 4px;
+              margin-top: 2px;
+              border-radius: 6px;
+              border: none;
+              transition: 0.3s;
+              cursor: pointer;
+
+              &:active {
+                background: rgb(15, 98, 146);
+              }
+            }
+
+            &.current {
+              padding: 8px;
+              background: rgb(91, 180, 176);
+            }
+          }
+        }
+      }
+    }
+
+    .totalScore {
+      display: grid;
+      grid-template-columns: 70px 60px;
+      grid-template-rows: 40px 40px;
+
+      span {
+        font-size: 23px;
+        color: #90e3f9;
+        margin: 10px;
+
+        &.header {
+          font-weight: bolds;
+        }
+
+        &.xi,
+        &.omikron {
+          font-size: 18px;
+        }
+      }
+    }
+
+    .timer {
+      position: absolute;
+      right: 97px;
+      top: 135px;
+      color: white;
+      font-size: 25px;
+      transition: right 0.5s ease;
+
+      &.green {
+        color: green;
+      }
+
+      &.yellow {
+        color: yellow;
+      }
+
+      &.orange {
+        color: orange;
+      }
+
+      &.red {
+        color: red;
+      }
+
+      &.big {
+        font-size: 30px;
+      }
+
+      &.oIsNext {
+        right: 33px;
+      }
+    }
+  }
 }
