--- a/src/TicToe/OnLinePage/Games/static/games.scss
+++ b/src/TicToe/OnLinePage/Games/static/games.scss
@@ -12,12 +12,14 @@
             font-size: 17px;
             font-weight: bold;
             width: 100%;
+            display: flex;
+            justify-content: space-around;
             .player{
                 &.myPlayer{
-                    color: green;
+                    color: lime;
                 }
                 &.enemy{
-                    color: red;
+                    color: #ff000e;
                 }
             }
         }
