--- a/src/TicToe/OnLinePage/Games/static/games.scss
+++ b/src/TicToe/OnLinePage/Games/static/games.scss
@@ -11,7 +11,7 @@
         .players{
             font-size: 17px;
             font-weight: bold;
-            width: 100%;
+            width: 93%;
             display: flex;
             justify-content: space-around;
             .player{
@@ -26,6 +26,10 @@
                 &.turn{
                     background: #2e3072;
                 }
+            }
+            .enemysAvatar{
+                width: 50px;
+                height: 50px;
             }
         }
         .gameBoard {
