--- a/src/TicToe/OnLinePage/Games/static/games.scss
+++ b/src/TicToe/OnLinePage/Games/static/games.scss
@@ -20,7 +20,12 @@
                 height: 50px;
                 display: flex;
                 align-items: center;
+                flex-wrap: wrap;
                 justify-content: center;
+                span {
+                    display: block;
+                    width: 100%;
+                }
                 &.myPlayer{
                     color:  dodgerblue;
                 }
